--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,13 @@
   <meta name="360-fullscreen" content="true"/>
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title>keep-accounts</title>
+  <style>
+    @media screen and (max-width: 750px) {
+      .el-message-box {
+        width: 80% !important;
+      }
+    }
+  </style>
 </head>
 <body>
 <div id="app"></div>
